@@ -1,3 +1,8 @@
+2009-09-03  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getDevices): Added optional timeout
+	parameter.
+
 2009-08-18  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsmodule.c: Define some IPP attribute tag constants.
